# aoc-2025

./: .gitignore  README.md  aoc2025.opam  flake.nix  pyproject.toml
.slang/: server.json
config/: hdl.f
days/01/src/: day01.ml  day01.mli  dune
days/01/test/: dune  test_day01.ml  test_range_finder.ml
days/02/: attempt.py
days/03/: attempt.py
days/08/: attempt.py  build.py  day08_top.sv  test_hdl_attempt.py
days/11/: attempt.py
days/lib/: input.py
days/ocaml/src/: dune  range_finder.ml  range_finder.mli
days/ocaml/test/: dune  test_range_finder.ml
hdl/: __init__.py  coord_distance.sv  fifo.sv  filtered_fifo.sv  systolic_sorter.sv  union_find.sv
nix/: overlay-yosys-slang.nix
rtl/: top.sv
sc/: build.py
sim/: test_coord_distance.py  test_fifo.py  test_filtered_fifo.py  test_systolic_sorter.py  test_union_find.py
sim/lib/: __init__.py  sim.py
